2005-08-29  Stephane Arnold <sarnold75@users.sourceforge.net>
	* bigfloat.tcl : added comments to make code easier to understand

2005-08-28  Stephane Arnold <sarnold75@users.sourceforge.net>

	* bigfloat.tcl : many optimizations around the fromstr
          command and all kind of constants (mainly integer)
	* bigfloat.test : updated test labels to more significant labels
	* Bug #1272836 : the math round() function has changed 
	  in Tcl 8.5a4 (intentionally) - now the round tests 
	  do no more rely upon this function.


2005-08-26  Stephane Arnold <sarnold75@users.sourceforge.net>

	* Feature Request 1261101 : automatically convert
	  the strings "0" and "1" to bignums
	* modified files : bignum.man,bignum.tcl,bignum.test
	* Bug 1273403 : fixed in bigfloat.test (all tests shared
	  the same version number)

2005-08-25  Kevin Kenny  <kennykb@acm.org>

	* combinatorics.test (combinatorics-2.7,3.10): Revised a few test cases
	* math.test (math-7.4):			       to handle Infinity
	as well as "overflow" and "division by zero" as an error result.
	
2005-08-24  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * optimize.man: Corrected a few typos

2005-08-23  Stephane Arnold <sarnold75@users.sourceforge.net>

	* bigfloat.tcl : Fixed a small bug in [fromstr].
	* bigfloat.man : Trying to make it more clear about accuracy
			and interval computations.

2005-08-17  Kevin Kenny  <kennykb@acm.org>

	* optimize.tcl (nelderMead):     Added ::math::optimize::nelderMead,
	* optimize.test (nelderMead-*):  an implementation of multidimensional
	* optimize.man:                  optimization using the downhill
	simplex method of Nelder and Mead.  (Addition includes test cases
	and rudimentary documentation.)
	* exponential.tcl: Changed the demo script not to error out.
	
2005-08-09  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * Added the linear programming routines that were 
          described in the man page, but not actually there