@@ -159,14 +159,11 @@ test "Histogram-1.3" "Histogram - linear data 2" -match glob -body {
 
 #
 # Quantiles
+# Bug #1272910: related to rounding 0.5 - use different levels instead
 #
 test "Quantiles-1.0" "Quantiles - raw data" -match tolerant -body {
-  set values [::math::statistics::quantiles $::data_linear {0.25 0.55 0.95}]
+  set values [::math::statistics::quantiles $::data_linear {0.26 0.56 0.96}]
 } -result {3.0 6.0 10.0}
-
-  set limits    {1.0 2.0 3.0 4.0}
-  set data_hist {0 10 20 10 0}
-  set values [::math::statistics::quantiles $limits $data_hist {0.25 0.5 0.9}]
 
 test "Quantiles-1.1" "Quantiles - histogram" -match tolerant -body {
   set limits    {1.0 2.0 3.0 4.0}
